--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.7.2
 Django==4.2.2
+django-cors-headers==4.0.0
 django-otp==1.2.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 psycopg2==2.9.6
+PyJWT==2.7.0
 python-decouple==3.8
 pytz==2023.3
 sqlparse==0.4.4
