--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -4,8 +4,21 @@ django-cors-headers==4.0.0
 django-otp==1.2.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+imbalanced-learn==0.10.1
+imblearn==0.0
+joblib==1.2.0
+numpy==1.24.3
+pandas==2.0.2
 psycopg2==2.9.6
 PyJWT==2.7.0
+python-dateutil==2.8.2
 python-decouple==3.8
+python-magic==0.4.27
 pytz==2023.3
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+sklearn==0.0.post5
 sqlparse==0.4.4
+threadpoolctl==3.1.0
+tzdata==2023.3
