--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -9,7 +9,7 @@ imblearn==0.0
 joblib==1.2.0
 numpy==1.24.3
 pandas==2.0.2
-psycopg2==2.9.6
+psycopg2-binary
 PyJWT==2.7.0
 python-dateutil==2.8.2
 python-decouple==3.8
