add: CICD, dockerfile

--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -44,4 +44,6 @@ jobs:
 
       - name: Build Docker image
         # if: github.event_name == 'pull_request'
-        run: pwd; ls; docker build -t myimage:${{ github.sha }} -f ./Dockerfile .
+        run: |
+          pwd && ls 
+        # docker build -t myimage:${{ github.sha }} -f ./Dockerfile .
