--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -25,10 +25,6 @@ jobs:
         with:
           ref: backend
 
-      - name: pwd
-        run: |
-          pwd; ls
-
       - name: setup docker buildx
         uses: docker/setup-buildx-action@v2
 
@@ -49,6 +45,4 @@ jobs:
 
       - name: Build Docker image
         # if: github.event_name == 'pull_request'
-        run: |
-          pwd && ls 
-        # docker build -t myimage:${{ github.sha }} -f ./Dockerfile .
+        run: docker build -t myimage:${{ github.sha }} -f ./Dockerfile .
