--- a/BackEnd/Dockerfile
+++ b/BackEnd/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 COPY . ./
+EXPOSE 8000
 CMD ["python", "yantra_backend/manage.py", "runserver 8000"]
