--- a/BackEnd/Dockerfile
+++ b/BackEnd/Dockerfile
@@ -4,4 +4,4 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 COPY . ./
 EXPOSE 8000
-CMD ["python", "yantra_backend/manage.py", "runserver 8000"]
+CMD ["python", "yantra_backend/manage.py", "runserver","0.0.0.0:8000"]
