--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -41,6 +41,7 @@
     "@popperjs/core": "^2.11.8",
     "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.9",
     "flowbite": "^1.6.5",
     "flowbite-svelte": "^0.37.4",
     "svelte-chartjs": "^3.1.2"
