--- a/FrontEnd/Dockerfile.prod
+++ b/FrontEnd/Dockerfile.prod
@@ -4,5 +4,6 @@ COPY package.json ./
 RUN npm install -g pnpm
 RUN pnpm install
 COPY . ./
+RUN pnpm build
 EXPOSE 4173
-CMD ["pnpm", "dev", "--host", "--port", "4173"]
+CMD ["pnpm", "preview", "--host"]
